tests/specs/ecosystem/custom_ui/utils/0_1_1.test
custom-ui/utils/0.1.1
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export function isHTMLElement(elem: any): elem is HTMLElement {
                                                  ~~~~~~~~~~~
    at file://<tmpdir>/src/is/dom.ts:9:51

